syntax = "proto3";

option csharp_namespace = "CardStorageService.Protos";

// package CardStorageService.Protos;

service ClientService{
	rpc Create (CreateClientRequest) returns (CreateClientRespose);
}

service CardService{
	rpc GetByClientId (GetByClientIdRequest) returns (GetByClientIdResponse);
}

message CreateClientRequest{
	string LastName = 1;
	string FirstName = 2;
	string Patronymic = 3;
}

message CreateClientRespose{
	int32 ClientId = 1;
}

message GetByClientIdRequest{
	int32 ClientId = 1;
}

message GetByClientIdResponse{
	repeated Card Cards = 1;
}

message Card{
	string CardNo = 1;
	string Name = 2;
	string CVV2 = 3;
	string ExpDate = 4;
}